Feat: Fastifyを使用するように。

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <section id="accounts" style="display: none;">
         <div>
             <h1>Accounts</h1>
-            <p>X (旧 Twitter): <a href="https://x.com/mirielnet" target="_blank" rel="noopener">@mirielnet</a>
+            <p>Twitter(現 X) <a href="https://x.com/mirielnet" target="_blank" rel="noopener">@mirielnet</a>
             <br />Rosekey (ActivityPub): <a href="https://p0.waka.style/@miriel">@miriel@p0.waka.style</a>
             <br />GitHub (Git): <a href="https://github.com/mirielnet" target="_blank" rel="noopener">@mirielnet</a>
             <br />TikTok: <a href="https://tiktok.com/@mirielnet" target="_blank" rel="noopener">@mirielnet</a>
