--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <title>みりえるどっとねっと</title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -43,6 +44,13 @@
             animation: bounce 2s infinite;
         }
 
+        .banners {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
                 transform: translateY(0);
@@ -72,6 +80,14 @@
             <h2>Mirielのサイトへようこそ。</h2>
             <p>下にスクロールしてください</p>
             <div class="scroll-indicator">↓</div>
+            <div class="banners">
+                <a href="https://tmksoft.net" target="_blank" rel="noopener">
+                    <img src="https://tmksoft.net/banner.png" alt="TMKSoft Banner">
+                </a>
+                <a href="https://hakurei.win" target="_blank" rel="noopener">
+                    <img src="https://hakurei.win/assets/mybanner.webp" alt="Hakurei Banner">
+                </a>
+            </div>
         </div>
     </section>
 
