--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,11 @@
             gap: 20px;
         }
 
+        .banners img {
+            width: 233px;
+            height: 80px;
+        }
+
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
                 transform: translateY(0);
